--- a/about-me.html
+++ b/about-me.html
@@ -12,7 +12,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img height="200" width="200" src="img/Chris-modified.png" alt="Headshot of Chris Dionne"></td>
+      <td><img height="200" width="200" src="Chris-modified.png" alt="Headshot of Chris Dionne"></td>
       <td><h1>Chris Dionne</h1>
       <p><em>Founder and CEO of <strong>INVENT AMERICA</strong>.</em></p>
       <p>You can find me on <strong><a href="https://www.linkedin.com">Linkedin</a></strong>.</p>
